VIEWERJAVA-1187: Create JUnit tests that will test the core functionality of viewer after the obfuscation process