@@ -6,9 +6,10 @@
 
     <groupId>com.temporary</groupId>
     <artifactId>groupdocs-viewer-java-sample</artifactId>
-    <version>3.0.0</version>
+    <version>3.2.0</version>
     <properties>
         <java.version>1.7</java.version>
+        <qa.skip.junit>false</qa.skip.junit>
         <groupdocs.viewer>${project.version}</groupdocs.viewer>
         <java.bootstrap.classes>${java.home}/lib/rt.jar</java.bootstrap.classes>
         <java.cryptographic.extension.classes>${java.home}/lib/jce.jar</java.cryptographic.extension.classes>
@@ -35,6 +36,12 @@
             <groupId>commons-net</groupId>
             <artifactId>commons-net</artifactId>
             <version>3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
@@ -63,6 +70,25 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <argLine>-Xms1024m -Xmx2048m -XX:MaxPermSize=512m -Dfile.encoding=UTF-8</argLine>
+                    <skip>${qa.skip.junit}</skip>
+                    <workingDirectory>target/</workingDirectory>
+                    <includes>
+                        <include>**/**Test.java</include>
+                    </includes>
+                    <systemProperties>
+                        <test.working.directory>${project.build.directory}\junitworkdirectory\</test.working.directory>
+                        <test.resources.directory>${project.build.testSourceDirectory}\..\resources\</test.resources.directory>
+                    </systemProperties>
+                    <!--<parallel>classes</parallel>-->
+                    <!--<threadCount>2</threadCount>-->
                 </configuration>
             </plugin>
         </plugins>
